# icp_wallet_token

./: Cargo.toml  dfx.json  package-lock.json  package.json
src/icp_token_wallet_backend/: Cargo.toml  icp_token_wallet_backend.did
src/icp_token_wallet_backend/src/: lib.rs
src/icp_token_wallet_frontend/: package.json  vite.config.js
src/icp_token_wallet_frontend/src/: App.js
